--- a/J3DModelViewer/View/MainWindow.xaml
+++ b/J3DModelViewer/View/MainWindow.xaml
@@ -212,15 +212,17 @@
                 </Grid.RowDefinitions>
 
                 <Grid Grid.Row="0">
-                    <GroupBox Header="Bone Animations">
+                    <GroupBox Header="Animations">
                         <Grid>
                             <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="*"/>
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
 
                             <StackPanel Grid.Row="0" Orientation="Horizontal">
-                                <Label Content="Number of loaded Animations:"/>
+                                <Label Content="Number of loaded Bone Animations:"/>
                                 <Label Content="{Binding Path=MainModel.BoneAnimations.Count}"/>
                             </StackPanel>
                             <ListView Grid.Row="1" ItemsSource="{Binding Path=MainModel.BoneAnimations}" SelectedItem="{Binding Path=MainModel.CurrentBoneAnimation}" HorizontalContentAlignment="Stretch">
@@ -244,6 +246,33 @@
                                     </DataTemplate>
                                 </ListView.ItemTemplate>
                             </ListView>
+
+                            <StackPanel Grid.Row="2" Orientation="Horizontal">
+                                <Label Content="Number of loaded Material Animations:"/>
+                                <Label Content="{Binding Path=MainModel.MaterialAnimations.Count}"/>
+                            </StackPanel>
+                            <ListView Grid.Row="3" ItemsSource="{Binding Path=MainModel.MaterialAnimations}" SelectedItem="{Binding Path=MainModel.CurrentMaterialAnimation}" HorizontalContentAlignment="Stretch">
+                                <ListView.ItemTemplate>
+                                    <DataTemplate>
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="*"/>
+                                                <ColumnDefinition Width="Auto"/>
+                                                <ColumnDefinition Width="Auto"/>
+                                                <ColumnDefinition Width="Auto"/>
+                                                <ColumnDefinition Width="Auto"/>
+                                            </Grid.ColumnDefinitions>
+
+                                            <Label Grid.Column="0" Content="{Binding Path=Name}"/>
+                                            <Label Grid.Column="1" Content="{Binding Path=LoopMode}"/>
+                                            <Label Grid.Column="2" Content="{Binding Path=AnimLengthInSeconds}"/>
+                                            <Label Grid.Column="3" Content="{Binding Path=BoneCount}"/>
+                                            <Label Grid.Column="4" Content="{Binding Path=AnimType}"/>
+                                        </Grid>
+                                    </DataTemplate>
+                                </ListView.ItemTemplate>
+                            </ListView>
+                            
                         </Grid>
                     </GroupBox>
                 </Grid>
