Put the View Models in the correct namespace.

--- a/J3DModelViewer/View/MainWindow.xaml
+++ b/J3DModelViewer/View/MainWindow.xaml
@@ -15,7 +15,7 @@
     </Window.InputBindings>
     
     <Window.DataContext>
-        <local:MainWindowViewModel/>
+        <viewmodel:MainWindowViewModel/>
     </Window.DataContext>
 
     <Window.Resources>
