Changed the old J3DRenderer namespace to the new J3DModelViewer one.

--- a/J3DModelViewer/App.xaml
+++ b/J3DModelViewer/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="J3DRenderer.App"
+﻿<Application x:Class="J3DModelViewer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:J3DRenderer"
+             xmlns:local="clr-namespace:J3DModelViewer"
              StartupUri="View/MainWindow.xaml">
     <Application.Resources>
          
