--- a/J3DModelViewer/View/MainWindow.xaml
+++ b/J3DModelViewer/View/MainWindow.xaml
@@ -1,15 +1,15 @@
-﻿<Window x:Class="J3DRenderer.MainWindow"
+﻿<Window x:Class="J3DModelViewer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:J3DRenderer"
+        xmlns:local="clr-namespace:J3DModelViewer"
         xmlns:wcommon="clr-namespace:WindEditor.WPF;assembly=WCommon"
         xmlns:jstudio="clr-namespace:JStudio.J3D;assembly=JStudio"
-        xmlns:viewmodel="clr-namespace:J3DRenderer.ViewModel"
+        xmlns:viewmodel="clr-namespace:J3DModelViewer.ViewModel"
         xmlns:wpfToolkit="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
-        Title="J3D Model Viewer" Height="720" Width="1280" Loaded="Window_Loaded" AllowDrop="True" Drop="Window_Drop" Icon="/J3DRenderer;component/resources/application_icon.ico">
+        Title="J3D Model Viewer" Height="720" Width="1280" Loaded="Window_Loaded" AllowDrop="True" Drop="Window_Drop" Icon="/J3DModelViewer;component/resources/application_icon.ico">
     <Window.InputBindings>
         <KeyBinding Command="{Binding Path=OpenModelCommand}" Key="O" Modifiers="Ctrl"/>
     </Window.InputBindings>
